cmake_minimum_required(VERSION 4.0)
project(Programming_Language)

set(CMAKE_CXX_STANDARD 14)

add_executable(Programming_Language
        .idea/.gitignore
        .idea/modules.xml
        .idea/Programming-Language.iml
        .idea/vcs.xml
        nguyenvanhieu.vn/Progrmamming/HomeworkC_C++/1000baitaplaptrinhcuathayNguyenTanTranMinhKhang/Chuong4_Ham/Bai115.cpp)
