cmake_minimum_required(VERSION 4.0)
project(Programming_Language)

set(CMAKE_CXX_STANDARD 14)

add_executable(Programming_Language
        .idea/.gitignore
        .idea/modules.xml
        .idea/Programming-Language.iml
        .idea/vcs.xml
        nguyenvanhieu.vn/Progrmamming/HomeworkC_C++/1000baitaplaptrinhcuathayNguyenTanTranMinhKhang/Chuong4_Ham/Bai115.cpp
        nguyenvanhieu.vn/Progrmamming/HomeworkC_C++/1000baitaplaptrinhcuathayNguyenTanTranMinhKhang/Test.cpp
        HowKteam.vn/programming/test.cpp
        FullHouse/FullHouseC43/Programming/HomeworkC_Cplusplus/HelloWorld.cpp
        FullHouse/FullHouseC43/Programming/HomeworkC_Cplusplus/HelloWorld.cpp
        "Information Technology/Website Skills Programming Language/nguyenvanhieu.vn/Progrmamming/HomeworkC_C++/1000baitaplaptrinhcuathayNguyenTanTranMinhKhang/Chuong1_LuuDoThuatToan/Bai1.cpp"
        "Information Technology/Website Skills Programming Language/nguyenvanhieu.vn/Progrmamming/HomeworkC_C++/1000baitaplaptrinhcuathayNguyenTanTranMinhKhang/Chuong1_LuuDoThuatToan/Bai1.cpp"
        "Information Technology/Website Skills Programming Language/nguyenvanhieu.vn/Progrmamming/test.cpp"
        "Information Technology/Website Skills Programming Language/nguyenvanhieu.vn/Progrmamming/HomeworkC_C++/1000baitaplaptrinhcuathayNguyenTanTranMinhKhang/Chuong1_LuuDoThuatToan/Bai2.cpp"
        "Information Technology/Website Skills Programming Language/nguyenvanhieu.vn/Progrmamming/HomeworkC_C++/1000baitaplaptrinhcuathayNguyenTanTranMinhKhang/Chuong1_LuuDoThuatToan/Bai3.cpp"
        "Information Technology/Website Skills Programming Language/nguyenvanhieu.vn/Progrmamming/HomeworkC_C++/1000baitaplaptrinhcuathayNguyenTanTranMinhKhang/Chuong1_LuuDoThuatToan/Bai4.cpp"
        "Information Technology/Website Skills Programming Language/nguyenvanhieu.vn/Progrmamming/HomeworkC_C++/1000baitaplaptrinhcuathayNguyenTanTranMinhKhang/Chuong1_LuuDoThuatToan/Bai5.cpp"
        "Information Technology/Website Skills Programming Language/nguyenvanhieu.vn/Progrmamming/HomeworkC_C++/1000baitaplaptrinhcuathayNguyenTanTranMinhKhang/Chuong2_LapTrinhNgonNguC_Cplusplus/Bai77.cpp"
        "Information Technology/Website Skills Programming Language/nguyenvanhieu.vn/Progrmamming/HomeworkC_C++/1000baitaplaptrinhcuathayNguyenTanTranMinhKhang/Chuong2_LapTrinhNgonNguC_Cplusplus/Bai78.cpp"
        "Information Technology/Website Skills Programming Language/nguyenvanhieu.vn/Progrmamming/HomeworkC_C++/1000baitaplaptrinhcuathayNguyenTanTranMinhKhang/Chuong2_LapTrinhNgonNguC_Cplusplus/Bai79.cpp")
